<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/general_header"
        app:iconSpaceReserved="false" >

        <Preference
            android:key="@string/set_as_assistant_key"
            app:title="@string/set_as_assistant_title"
            app:summary="@string/set_as_assistant_summary"
            app:isPreferenceVisible="true"
            app:iconSpaceReserved="false" >
            <intent android:action="android.settings.MANAGE_DEFAULT_APPS_SETTINGS"/>
        </Preference>

        <Preference
            android:key="@string/add_widget_key"
            app:title="@string/add_widget_title"
            app:summary="@string/add_widget_summary"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:key="@string/remove_cookie_key"
            android:title="@string/remove_cookie_title"
            android:summary="@string/remove_cookie_summary"
            app:defaultValue="true"
            android:singleLineTitle="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/translator_header"
        app:iconSpaceReserved="false" >

        <Preference
            app:key="@string/install_colordict_key"
            app:title="@string/colordict_not_installed"
            app:singleLineTitle="false"
            app:summary="@string/colordict_intro"
            app:isPreferenceVisible="true"
            app:iconSpaceReserved="false" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.socialnmobile.colordict" >
            </intent>
        </Preference>

        <SwitchPreferenceCompat
            app:key="@string/colordict_fullscreen_key"
            app:title="@string/colordict_fullscreen_title"
            app:singleLineTitle="false"
            app:isPreferenceVisible="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/search_engine_header"
        app:iconSpaceReserved="false" >

        <SwitchPreferenceCompat
            app:key="@string/meta_search_key"
            app:title="@string/meta_search_title"
            app:singleLineTitle="false"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />

        <!-- TODO:
        <MultiSelectListPreference
            android:key="WEB_SEARCH_ENABLE"
            android:title="Enabled Search Engine"
            android:entries="@array/meta_search_tab_title"
            android:entryValues="@array/meta_search_tab_id"
            android:defaultValue="@array/meta_search_tab_id"
            android:dependency="@string/meta_search_key" />
        -->

        <DropDownPreference
            android:key="@string/search_engine_key"
            android:title="@string/meta_search_web_engine_title"
            app:singleLineTitle="false"
            android:entries="@array/web_search_engine_entries"
            android:entryValues="@array/web_search_engine_values"
            android:defaultValue="@string/url_duck"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <DropDownPreference
            android:key="@string/searx_search_engine_key"
            android:title="@string/searx_meta_search_web_engine_title"
            app:singleLineTitle="false"
            android:entries="@array/searx_search_engine_entries"
            android:entryValues="@array/searx_search_engine_values"
            android:defaultValue="@string/url_searx_1"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <DropDownPreference
            android:key="@string/twitter_search_engine_key"
            android:title="@string/twitter_meta_search_web_engine_title"
            app:singleLineTitle="false"
            android:entries="@array/twitter_search_engine_entries"
            android:entryValues="@array/twitter_search_engine_values"
            android:defaultValue="@string/url_twitter"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <DropDownPreference
            android:key="@string/reddit_search_engine_key"
            android:title="@string/reddit_meta_search_web_engine_title"
            app:singleLineTitle="false"
            android:entries="@array/reddit_search_engine_entries"
            android:entryValues="@array/reddit_search_engine_values"
            android:defaultValue="@string/url_reddit"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <DropDownPreference
            android:key="@string/youtube_search_engine_key"
            android:title="@string/youtube_meta_search_web_engine_title"
            app:singleLineTitle="false"
            android:entries="@array/youtube_search_engine_entries"
            android:entryValues="@array/youtube_search_engine_values"
            android:defaultValue="@string/url_youtube"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:key="@string/custom_search_engine_key"
            android:title="@string/custom_meta_search_web_engine_title"
            app:singleLineTitle="false"
            android:defaultValue="@string/url_custom"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
